# odoorecursiveaddons

./: README.md  pyproject.toml  upload.py
src/odoorecursiveaddons/: __init__.py  core.py
