[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoorecursiveaddons"
version = "0.2.1"
description = "Expand addons_path recursively from Odoo configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "acevedoesteban999", email = "acevedoesteban999@gmail.com" },
]
keywords = ["odoo", "addons", "config", "recursive", "paths"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/acevedoesteban999/odoorecursiveaddons"

[tool.hatch.build.targets.wheel]
packages = ["src/odoorecursiveaddons"]
